[tool.poetry]
name = "esak"
version = "1.2.0"
description = "Marvel API wrapper for python."
authors = ["Brian Pepple <bdpepple@gmail.com>"]
license = "MIT"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
readme = "README.rst"
packages = [
	{ include = "esak" },
]
include = [
    { path = "tests", format = "sdist" }
]
classifiers=[
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.13.0"
requests = "^2.26.0"
# Optional dependencies
sphinx-rtd-theme = {version = "^0.5.2", optional = true}

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
black = "^21.8b0"
requests-mock = "^1.9.3"
flake8 = "^3.9.2"
tox = "^3.24.3"
pre-commit = "^2.14.1"
isort = "^5.9.3"
seed-isort-config = "^2.2.0"
pyupgrade = "^2.29.0"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 95
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["marshmallow", "pytest", "requests", "requests_mock"]

[tool.poetry.urls]
"Homepage" = "https://github.com/bpepple/esak"
"Bug Tracker" = "https://github.com/bpepple/esak/issues"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme"]

[tool.coverage.run]
source = ["esak"]

[tool.coverage.report]
show_missing = true
