[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["esak"]

[tool.poetry]
authors = ["Brian Pepple <bdpepple@gmail.com>"]
classifiers = [
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Utilities",
  "Typing :: Typed"
]
description = "Python wrapper for the Marvel API."
include = [
  {format = "sdist", path = "tests"}
]
license = "MIT"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
name = "esak"
packages = [
  {include = "esak"}
]
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
pydantic = "^2.8.0"
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-include-markdown-plugin = "^6.2.1"
mkdocs-material = "^9.5.30"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
tox = "^4.18.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Metron-Project/esak/issues"
"Homepage" = "https://github.com/Metron-Project/esak"

[tool.pytest.ini_options]
addopts = ["--cov"]

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812",
  "D107",
  "DTZ",
  "EM101",
  "EM102",
  "FA102",
  "FBT",
  "ISC001",
  "TRY003"
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
