[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pre-commit>=4",
  "ruff>=0.11.0"
]
docs = [
  "mkdocs-include-markdown-plugin>=6.2.1,<7",
  "mkdocs-material>=9.5.30,<10",
  "mkdocs>=1.6.0,<2",
  "mkdocstrings[python]>=0.25.1,<0.26"
]
test = [
  "pytest-cov>=5.0.0,<6",
  "pytest>=8.2.2,<9",
  "requests-mock>=1.12.1,<2",
  "tox>=4.18.1,<5"
]

[project]
authors = [{email = "bdpepple@gmail.com", name = "Brian Pepple"}]
classifiers = [
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.8.0,<3",
  "requests>=2.26.0,<3"
]
description = "Python wrapper for the Marvel API."
license = "MIT"
maintainers = [{email = "bdpepple@gmail.com", name = "Brian Pepple"}]
name = "esak"
readme = "README.md"
requires-python = "~=3.10"
version = "2.0.0"

[project.urls]
"Bug Tracker" = "https://github.com/Metron-Project/esak/issues"
Homepage = "https://github.com/Metron-Project/esak"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["esak"]

[tool.hatch.build.targets.sdist]
include = [
  "esak",
  "tests"
]

[tool.hatch.build.targets.wheel]
include = ["esak"]

[tool.pytest.ini_options]
addopts = ["--cov"]

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812",
  "D107",
  "DTZ",
  "EM101",
  "EM102",
  "FA102",
  "FBT",
  "ISC001",
  "TRY003"
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.uv]
default-groups = [
  "dev",
  "docs",
  "test"
]
